# User_management_system

./: CMakeLists.txt  OOP_CourseWork_Rami_Alshalabi.docx  README.md
bank_management_system/: CMakeLists.txt  Clients.txt  Currencies.txt  LoginRegister.txt  TransfersLog.txt  Users.txt  bank_management_system.cpp  bank_management_system.h  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsClientListScreen.h  clsCurrenciesListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrencyScreen.h  clsFindUserScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsers.h  clsPerson.h  clsScreen.h  clsString.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUpdateCurrencyRateScreen.h  clsUpdateUserScreen.h  clsUser.h  clsUsersListScreen.h  clsUtil.h  (+2 more)
